z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,8 @@ body {
 	background: #000;
 	border-radius: 5px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+	transition: 0.3s;
+	z-index: 100;
 }
 .cookie-ask:hover{
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
